# samplr

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  samplr.spec  setup.py
samplr/: __init__.py  cli.py  core.py  desktop_ui.py
scripts/: build-macos.sh  generate-macos-icon.sh  release-macos.sh
tests/: __init__.py  test_core.py  test_desktop_ui.py
